[project]
name = "my-language-pal-chatgptproxy"
version = "1.0.0"
authors = [
    {name = "Cauchy Cai", email = "cauchy.cai@gmail.com"},
]
description = "My Language Pal - ChatGPT Proxy"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["chatgpt"]
dependencies = [
    "openai",
    "flask",
    "requests"
]

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
# [tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"